human-intervention-logs/io.projectreactor.netty:reactor-netty-core:1.1.0/gradle-test/gradle-test-2026-05-04T22-39-51-763243Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.projectreactor.netty:reactor-netty-core:1.1.0
Command: `/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5849-e984208d/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5849-e984208d/tests/src/io.projectreactor.netty/reactor-netty-core/1.1.0/build/reports/problems/problems-report.html
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5849-e984208d/tests/src/io.projectreactor.netty/reactor-netty-core/1.1.0/src/test/java/io_projectreactor_netty/reactor_netty_core/Reactor_netty_coreTest.java:313: error: no suitable method found for create(String,int,int,boolean,boolean)
        LoopResources loops = LoopResources.create("reactor-netty-loop-test", 1, 1, true, true);
                                           ^
    method LoopResources.create(String) is not applicable
      (actual and formal argument lists differ in length)
    method LoopResources.create(String,int,boolean) is not applicable
      (actual and formal argument lists differ in length)
    method LoopResources.create(String,int,int,boolean) is not applicable
      (actual and formal argument lists differ in length)
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5849-e984208d/tests/src/io.projectreactor.netty/reactor-netty-core/1.1.0/src/test/java/io_projectreactor_netty/reactor_netty_core/Reactor_netty_coreTest.java:313: error: no suitable method found for create(String,int,int,boolean,boolean)
          LoopResources loops = LoopResources.create("reactor-netty-loop-test", 1, 1, true, true);
                                             ^
      method LoopResources.create(String) is not applicable
        (actual and formal argument lists differ in length)
      method LoopResources.create(String,int,boolean) is not applicable
        (actual and formal argument lists differ in length)
      method LoopResources.create(String,int,int,boolean) is not applicable
        (actual and formal argument lists differ in length)
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.
BUILD FAILED in 2s


For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5849-e984208d/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.projectreactor.netty:reactor-netty-core:1.1.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
9 actionable tasks: 1 executed, 8 up-to-date
